--- a/netlify.toml
+++ b/netlify.toml
@@ -5,15 +5,12 @@
 [[redirects]]
   from = "/*"
   to = "/tw"
-  status = 302
-  conditions = {Language = ["en"], Country = ["US"], Role = ["admin"]}
+  conditions = {Language = ["en"], Country = ["US"]}
 
 [[redirects]]
   from = "/*"
   to = "/"
-  status = 301
 
 [[redirects]]
   from = "/old-path"
   to = "/new-path"
-  status = 302
